[gd_scene load_steps=57 format=3 uid="uid://cp41di8h5qh0e"]

[ext_resource type="Script" uid="uid://cpymhghhtcjer" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://do8xmoryys571" path="res://Sprites/Player/attack.png" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://cisfvmrs5q0c6" path="res://Sprites/Player/ATTACK 1.png" id="4_3smsa"]
[ext_resource type="Texture2D" uid="uid://wmdqsh45vxnv" path="res://Sprites/Player/HURT.png" id="5_8erm5"]
[ext_resource type="Texture2D" uid="uid://du023qr4tmck2" path="res://Sprites/Player/IDLE.png" id="6_f1ek2"]
[ext_resource type="PackedScene" uid="uid://b1lfssig3hv7g" path="res://Scenes/augument_screen.tscn" id="7_3smsa"]
[ext_resource type="Texture2D" uid="uid://dabd3kf20n4el" path="res://Sprites/Player/RUN.png" id="7_tx1dd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6t5aa"]
size = Vector2(135.80902, 128.34367)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3smsa"]
size = Vector2(223, 46)

[sub_resource type="CircleShape2D" id="CircleShape2D_vgqql"]
radius = 69.19964

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(172.5, 151.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("3_6t5aa")
region = Rect2(0, 0, 39, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("3_6t5aa")
region = Rect2(39, 0, 39, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("3_6t5aa")
region = Rect2(78, 0, 39, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("3_6t5aa")
region = Rect2(0, 72, 39, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("3_6t5aa")
region = Rect2(39, 72, 39, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("3_6t5aa")
region = Rect2(78, 72, 39, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_tx1dd"]
animations = [{
"frames": [{
"duration": 0.4,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_f1ek2")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("4_3smsa")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("4_3smsa")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("4_3smsa")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("4_3smsa")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("4_3smsa")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("4_3smsa")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("4_3smsa")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("5_8erm5")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("5_8erm5")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("5_8erm5")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("5_8erm5")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("6_f1ek2")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("6_f1ek2")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("6_f1ek2")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("6_f1ek2")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("6_f1ek2")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("6_f1ek2")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("6_f1ek2")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("6_f1ek2")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("6_f1ek2")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("6_f1ek2")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("7_tx1dd")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("7_tx1dd")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("7_tx1dd")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4vc"]
atlas = ExtResource("7_tx1dd")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxox"]
atlas = ExtResource("7_tx1dd")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("7_tx1dd")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("7_tx1dd")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwqj"]
atlas = ExtResource("7_tx1dd")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwi16"]
atlas = ExtResource("7_tx1dd")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqm"]
atlas = ExtResource("7_tx1dd")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph33w"]
atlas = ExtResource("7_tx1dd")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ldla"]
atlas = ExtResource("7_tx1dd")
region = Rect2(1056, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("7_tx1dd")
region = Rect2(1152, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmr2m"]
atlas = ExtResource("7_tx1dd")
region = Rect2(1248, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3m3"]
atlas = ExtResource("7_tx1dd")
region = Rect2(1344, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vlem"]
atlas = ExtResource("7_tx1dd")
region = Rect2(1440, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_8eeqe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}],
"loop": true,
"name": &"ATTACK",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}],
"loop": true,
"name": &"DYING",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gxox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwi16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmr2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vlem")
}],
"loop": true,
"name": &"RUNNING",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")

[node name="DamageArea" type="Area2D" parent="."]
scale = Vector2(0.5522461, 0.54541063)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(-6.337751, 3.6669636)
shape = SubResource("RectangleShape2D_6t5aa")

[node name="DashDamageArea" type="Area2D" parent="."]
position = Vector2(-3, 0.9999924)
scale = Vector2(0.5522461, 0.54541063)

[node name="Collider" type="CollisionShape2D" parent="DashDamageArea"]
scale = Vector2(1.810787, 1.833481)
shape = SubResource("RectangleShape2D_3smsa")

[node name="Collider" type="CollisionShape2D" parent="."]
scale = Vector2(0.5522461, 0.54541063)
shape = SubResource("CircleShape2D_vgqql")

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="UI" type="CanvasLayer" parent="PlayerCamera"]

[node name="Health" type="ProgressBar" parent="PlayerCamera/UI"]
modulate = Color(0.8254419, 0, 0.30938658, 1)
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.92
anchor_right = 0.95
anchor_bottom = 0.93
offset_right = 4.0
offset_bottom = 27.0
show_percentage = false

[node name="LevelBar" type="ProgressBar" parent="PlayerCamera/UI"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
show_percentage = false

[node name="Label" type="Label" parent="PlayerCamera/UI/LevelBar"]
layout_mode = 0
offset_left = 511.0
offset_top = 4.0
offset_right = 652.0
offset_bottom = 28.0
text = "Level: 1"

[node name="ColorRect" type="ColorRect" parent="PlayerCamera/UI"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(-0.25, 49.25)
shape = SubResource("RectangleShape2D_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AttackHitbox"]
position = Vector2(0, 100)
scale = Vector2(4.410256, 0.7222222)
sprite_frames = SubResource("SpriteFrames_tx1dd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-14, -33)
scale = Vector2(2.1770833, 2.0208333)
sprite_frames = SubResource("SpriteFrames_8eeqe")
animation = &"RUNNING"

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AugumentSelection" parent="." instance=ExtResource("7_3smsa")]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="body_entered" from="DashDamageArea" to="." method="_on_dash_damage_area_body_entered"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
